<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">SayItAlarm</string>
    <!-- Informational Text -->
    <string name="info_next_alarm_time">After %s hours and %s minutes,\n the alarm will go off.</string>
    <string name="info_timeout">The alarm will stop ringing after</string>
    <string name="info_snooze">Alarm will ring again after"</string>
    <string name="info_add_and_edit_initialize_error">Oops! Something went wrong. Please restart the application and try again.</string>
    <string name="info_settings_initialize_error">Oops! Something went wrong while loading the settings. Please restart the application and try again.</string>
    <string name="info_list_initialize_error">Oops! Something went wrong while loading the alarms. Please restart the application and try again.</string>
    <string name="info_say_it_error">Oops! Something went wrong. I apologize for the error.\n\n Please let me know about this issue, it will help us prevent it in the future. You can find contact information in the settings menu.\n</string>
    <string name="info_say_it_error_name">Error: </string>
    <string name="info_list_no_alarm">Hey there! Just tap the + button to get started.</string>
    <string name="info_scripts">Please write texts that uplift you or improve your mood. Or, write about something you want to achieve. You will need to say them to turn off the alarm.</string>
    <string name="info_scripts_only_letter">Please write the text using only letters. Text should be pronounceable.</string>
    <string name="info_permission_rationale">To use SayItAlarm, the following permissions are required:
        \n\n Essential:
        \n\t\u2022 RecordAudio(Mic): Recommend selecting \"Allow only while using the app\".
        \n\t\u2022 Notification
        \n\n Optional:
        \n\t\u2022 Music and Audio: You can choose audio files to use as alarm sounds. </string>
    <string name="info_about">
        Have you ever wanted your first waking thought to be about something you deeply desire? Or
        have you ever wanted to start a day with a bit more passion?\n\n
        SayItAlarm is born for this, but also if\n\n
        Have you ever woken up immediately when the worries from last night come up? Or
        have you ever felt hopeless when you woke up?\n\n
        Research shows that self-affirmation boosts performance and mental health. Speaking makes your brain focus.
        Daily practice signals what\’s important. The brain then protects these ideas and helps achieve them.
        I\'ve seen improvements using SayItAlarm every day. I hope it helps you too.\n\n
        It\'s all about SayItAlarm, but if I may add something more…\n\n
        SayItAlarm is an open-source project. You can read the entire application code on GitHub.
        As SayItAlarm does not collect any data, it\'s hard to identify problems. I\'m here to help.
        Please report any issues by writing a review on Google Play or emailing me.
        Sending you a smile! I love getting emails. Feel free to reach out.  Let\'s say it!\n\n
        Love,\n
        Mima
    </string>
    <string name="info_stt_recognizer_online">🟢 Now speech recognition is running over the internet.</string>
    <string name="info_stt_recognizer_android_download_available">You can download the speech-to-text model.</string>
    <string name="info_stt_recognizer_android_why_download">Currently, SayIt uses Android\'s speech-to-text library.
        It usually works offline but may use the internet for speech recognition.
        If SayItAlarm can\'t run solely offline, a warning will show at the bottom of the alarm screen.
        No warning means the app is running offline. Downloading the language model allows sayIt to run solely on the device.\n\n
        For Galaxy devices, you might need to adjust the keyboard settings. The Galaxy speech recognition model does not support offline mode.</string>
    <!-- Label -->
    <string name="alarms">Alarms</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="repeat">Repeat</string>
    <string name="label">Label</string>
    <string name="ringtone">Ringtone</string>
    <string name="alert_type">Alert Type</string>
    <string name="permission">Permission</string>
    <string name="request_permission">Request permissions</string>
    <string name="settings">Settings</string>
    <string name="timeout">TimeOut</string>
    <string name="snooze">Snooze</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="licenses">Licenses</string>
    <string name="say_it">Say It</string>
    <string name="start">Start</string>
    <string name="try_again">Try again</string>
    <string name="loading">Loading…</string>
    <string name="listening">Listening…</string>
    <string name="ready">Ready</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="error">Error</string>
    <string name="exit">Exit</string>
    <string name="finish">Finish</string>
    <string name="copy">Copy</string>
    <string name="email">Email</string>
    <string name="google_play">GooglePlay</string>
    <string name="github">Github</string>
    <string name="download">Download</string>
    <!-- ContentDescription -->
    <string name="action_close">Close</string>
    <string name="action_add_alarm">Add alarm</string>
    <string name="action_add_script">Add say it script</string>
    <string name="action_delete_alarm">Delete alarm</string>
    <string name="action_delete_script">Delete script</string>
    <string name="action_edit">Edit item aligned</string>
    <string name="action_open_settings">Open settings</string>
    <string name="action_set_alarm_time">Set alarm time</string>
    <string name="action_navigate_back">Return to previous screen</string>
    <string name="action_check">Select or confirm this option</string>
    <string name="action_component_wheel_picker">Select a value using the wheel picker</string>
    <string name="action_info">Show information</string>
    <string name="action_collapse">Collapse section</string>
</resources>
